@@ -1,6 +1,6 @@
-    <li class="footer"><div style="bottom: 8px; right: 20px; text-align: right;">
+    <li class="footer">
 	<small>Generated on $date for $projectname by
-    <a href="http://www.doxygen.org/index.html"><b><big>doxygen</big></b></a> $doxygenversion </small></div></li>
+    <a href="http://www.doxygen.org/index.html"><b><big>doxygen</big></b></a> $doxygenversion </small></li>
    </ul>
  </div>
 <script type="text/javascript">
